--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,28 @@
-html,
-body{
+*{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+
+html,
+body{
     height: 100%;
+}
+
+html{
+    font-size: 10px;
+}
+
+h1{
+    font-size: 3rem;
+}
+
+h2{
+    font-size: 2.4rem;
+}
+
+h3{
+    font-size: 2rem;
 }
 
 body{
@@ -15,29 +35,21 @@ img{
     height: 30px;
 }
 
-header{
-    background-color: aquamarine;
-    padding: 10px;
-    grid-column: 2;
-    grid-row: 1;
-}
-
 nav{
     background-color: antiquewhite;
     grid-row: 1 / -1;
     grid-column: 1;
 
-    padding: 4%;
+    padding: 8%;
 
     display: flex;
     flex-direction: column;
 
 }
 
-#nav-dashboard-div,
 #nav-home-div,
 #nav-settings-div{
-    margin-bottom: 10%;
+    margin-top: 15%;
 }
 
 #nav-dashboard-div,
@@ -45,7 +57,8 @@ nav{
 #nav-settings-div > div{
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 2%;
+    margin-bottom: 10%;
 }
 
 main{
@@ -57,4 +70,41 @@ main{
 a{
     text-decoration: none;
     color: black;
+}
+
+header{
+    padding: 100px;
+    background-color: aquamarine;
+    padding: 2% 5% 0;
+    grid-column: 2;
+    grid-row: 1;
+}
+
+#top-half{
+    display: flex;
+    justify-content: space-between;
+}
+
+#left,
+#right{
+    display: flex;
+    align-items: center;
+    
+    gap: 5%;
+}
+
+#left{
+    flex-basis: calc(100%/1.5);
+}
+
+#right{
+    justify-content: flex-end;
+    flex-basis: calc(100%/3);
+}
+
+input[type="text"]{
+    border-radius: 20px;
+    border: 1px solid rgb(195, 193, 193);
+    line-height: 1.8;
+    width: 80%;
 }
