--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,10 @@ header{
     padding: 2% 5% 0;
     grid-column: 2;
     grid-row: 1;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 #top-half{
@@ -85,19 +89,19 @@ header{
     justify-content: space-between;
 }
 
-#left,
-#right{
+#top-half #left,
+#top-half #right{
     display: flex;
     align-items: center;
     
     gap: 5%;
 }
 
-#left{
+#top-half #left{
     flex-basis: calc(100%/1.5);
 }
 
-#right{
+#top-half #right{
     justify-content: flex-end;
     flex-basis: calc(100%/3);
 }
@@ -107,4 +111,36 @@ input[type="text"]{
     border: 1px solid rgb(195, 193, 193);
     line-height: 1.8;
     width: 80%;
+}
+
+#bottom-half{
+    display: flex;
+    justify-content: space-between;
+
+}
+
+#bottom-half #left,
+#bottom-half #right{
+    flex-basis: calc(100%/3);
+    display: flex;
+    align-items: center;
+    gap: 2%;
+}
+
+#left-img-div img{
+    height: 60px;
+}
+
+#bottom-half #right{
+    justify-content: space-between;
+}
+
+#bottom-half #right button{
+    color: white;
+    font-size: 1.8rem;
+    font-weight: bold;
+    background-color: #2563eb;
+    padding: 15px 30px;
+    border-radius: 50px;
+    border: none;
 }
