--- a/styles.css
+++ b/styles.css
@@ -61,12 +61,6 @@ nav{
     margin-bottom: 10%;
 }
 
-main{
-    background-color: blue;
-    grid-column: 2;
-    grid-row: 2;
-}
-
 a{
     text-decoration: none;
     color: black;
@@ -144,3 +138,49 @@ input[type="text"]{
     border-radius: 50px;
     border: none;
 }
+
+main{
+    background-color: blue;
+    grid-column: 2;
+    grid-row: 2;
+
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+main #left{
+    padding: 4%;
+
+    background-color: goldenrod;
+    grid-column: 1;
+    grid-row: 1 / -1;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1%;
+}
+
+
+#gallery-div{
+    min-height: 85%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    align-items: center;
+    gap: 5%;
+}
+
+.panel{
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    border-radius: 7px;
+    box-shadow: -8px 0;
+}
+
+
+main #right{
+    background-color: purple;
+}
+
