--- a/styles.css
+++ b/styles.css
@@ -71,9 +71,8 @@ a{
 }
 
 header{
-    padding: 100px;
     background-color: aquamarine;
-    padding: 2% 5% 0;
+    padding: 3%;
     grid-column: 2;
     grid-row: 1;
 
@@ -187,15 +186,14 @@ main #right{
     background-color: green;
 }
 
-main #top{
-    min-height: 100%;
+#right #top{
+    height: 50%;
     background-color: purple;
     padding: 3rem 0 4%;
 }
 
 #announcement-board-div{
     background-color: white;
-    min-height: 30rem;
     margin-top: 2rem;
     border-radius: 8px;
 
@@ -210,9 +208,6 @@ main #top{
 #first{
     border-bottom: 2px solid grey;
 }
-
-main #bottom{
-    background-color: grey;
-}
-
+/* To do: how do i get proper heights when display: grid is
+controlling heights?? */
 
