--- a/styles.css
+++ b/styles.css
@@ -164,6 +164,26 @@ main #left{
     gap: 1%;
 }
 
+#top-right{
+    background-color: pink;
+    padding-top: 3rem;
+}
+
+#bottom-right{
+    background-color: aqua;
+    grid-column: 2;
+    grid-row: 2;
+
+    padding-top: 2rem;
+}
+
+#bottom-right div{
+    margin-top: 1rem;
+}
+
+.trending{
+    display: flex;
+}
 
 #gallery-div{
     min-height: 85%;
@@ -180,16 +200,6 @@ main #left{
     background-color: white;
     border-radius: 7px;
     box-shadow: -8px 0;
-}
-
-main #right{
-    background-color: green;
-}
-
-#right #top{
-    height: 50%;
-    background-color: purple;
-    padding: 3rem 0 4%;
 }
 
 #announcement-board-div{
@@ -210,4 +220,3 @@ main #right{
 }
 /* To do: how do i get proper heights when display: grid is
 controlling heights?? */
-
