--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,8 @@ nav{
     align-items: center;
     gap: 2%;
     margin-bottom: 10%;
+
+    overflow: hidden;
 }
 
 a{
@@ -84,7 +86,7 @@ a{
 
 header{
     background-color: white;
-    padding: 3%;
+    padding: 2%;
     grid-column: 2;
     grid-row: 1;
 
@@ -96,6 +98,7 @@ header{
 #top-half{
     display: flex;
     justify-content: space-between;
+    margin-bottom: 3%;
 }
 
 #top-half #left,
@@ -171,7 +174,7 @@ main > div{
 }
 
 main #left{
-    padding: 3rem 4% 4%;
+    padding: 3rem 4% 2rem;
 
     grid-column: 1;
     grid-row: 1 / -1;
@@ -215,7 +218,11 @@ main #left{
     width: 100%;
     background-color: white;
     border-radius: 7px;
-    box-shadow: -8px 0;
+    box-shadow: -8px 0 orange;
+    padding: 5%;
+
+    display: grid;
+    grid-template-rows: 4fr 1fr;
 }
 
 #announcement-board-div,
@@ -238,6 +245,33 @@ main #left{
 
 #first{
     border-bottom: 2px solid grey;
+}
+
+.panel-icons-div{
+    display: flex;
+    justify-content: flex-end;
+    gap: .5rem;
+}
+
+@media (max-width: 1150px) {
+    nav h1,
+    nav h3{
+        font-size: 2rem;
+    }
+}
+
+@media (max-width: 870px) {
+    nav h1,
+    nav h3{
+        font-size: 1.3rem;
+    }
+}
+
+@media (max-width: 650px) {
+    nav h1,
+    nav h3{
+        font-size: 1rem;
+    }
 }
 /* To do: how do i get proper heights when display: grid is
 controlling heights?? */
